--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-druid-shell = "0.7.0"
+druid = "0.7.0"
 log = "0.4.11"
 simple_logger = "1.11.0"
