--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 authors = ["Leopold Luley <git@leopoldluley.de>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "coat"
+path = "src/lib.rs"
+
+[[bin]]
+name = "coat-test"
+path = "src/main.rs"
 
 [dependencies.druid-shell]
 version = "0.7.0"
